fix: archive notice dark mode

--- a/src/ui/styles/base/base.css
+++ b/src/ui/styles/base/base.css
@@ -117,6 +117,8 @@
 	}
 
 	button {
+		-webkit-appearance: none;
+		appearance: none;
 		-webkit-tap-highlight-color: transparent;
 		cursor: pointer;
 	}
